SERVER-19333 abandon startup as soon as port binding fails