src/mongo/util/net/message_server.h
@@ -66,7 +66,7 @@ public:
     virtual ~MessageServer() {}
     virtual void run() = 0;
     virtual void setAsTimeTracker() = 0;
-    virtual void setupSockets() = 0;
+    virtual bool setupSockets() = 0;
 };
 
 // TODO use a factory here to decide between port and asio variations
